<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <GVL Name="BCD_CmdState" Id="{be5a09ae-b114-444d-8210-30a00872d8ce}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	/// ctrl commands definitions
	cBCD_CMD_DONE: INT := -1;
	/// Connect TCP socket
	cBCD_CMD_CONNECT_SOCKET: INT := 1002;
	/// Close TCP socket
	cBCD_CMD_CLOSE_SOCKET: INT := 1004;
	/// Communication test 
	cBCD_CMD_COM_TEST: INT := 1006;
	/// Readout device information
	cBCD_CMD_READ_DEV_INFO: INT := 1008;
	/// Readout operating data
	cBCD_CMD_READ_OP_DATA: INT := 1010;
	/// Readout service information	
	cBCD_CMD_READ_SERVICE_INFO: INT := 1012;
	/// Command enable the sensor gate for X-TIME ("duration" setting of sensor object trigger)
	cBCD_CMD_READ_BARCODE: INT := 1014;
	/// Sensor try to detect a barcode.
	/// ctrl state definitions
	cBCD_STA_WaitForJob: INT := 1000;
	/// Open TCP socket busy
	cBCD_STA_ConnectSocketBusy: INT := 1002;
	/// Close TCP socket busy
	cBCD_STA_CloseSocketBusy: INT := 1004;
	/// TCP socket closed
	cBCD_STA_SocketClosed: INT := 1006;
	/// Communication test busy
	cBCD_STA_ComTestBusy: INT := 1008;
	/// Read bar code busy
	cBCD_STA_ReadCodeBusy: INT := 1010;
	/// Error
	cBCD_STA_Error: INT := 256;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>