<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_BCD_Error" Id="{fd7eb61d-56f0-42ba-bb26-997fcf93b487}">
    <Declaration><![CDATA[TYPE T_BCD_Error :
STRUCT
	/// Reset failure
	bolErrAck: BOOL;
	/// atleast one failure active
	bolErrorActive: BOOL;
	/// error in TCP socket
	bolSocketError: BOOL;
	/// error in sensor (SICK)
	bolSensorError: BOOL;
	/// error ID
	udiErrorID: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>