<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_BCD_Status" Id="{b917762c-531c-47d1-904c-a37d4358f834}">
    <Declaration><![CDATA[TYPE T_BCD_Status :
STRUCT
	/// Socket connected
	bolSocketConnected: BOOL;
	bolComChecked: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>