<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_BCC_Data" Id="{c9224f55-ec56-40a2-a569-7889ca05304e}">
    <Declaration><![CDATA[TYPE T_BCC_Data :
STRUCT
	uliBarCode: ULINT;
	strBarCode: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>