<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_BCC" Id="{e5c436e2-87ec-4bea-8091-0de4f2a8dea7}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_BCC :
STRUCT
	/// configuration
	Cfg: T_Ctrl_SIf_BCC_Cfg;
	/// parameter
	Par: T_Ctrl_SIf_BCC_Par;
	/// current values
	Cur: T_Ctrl_SIf_BCC_Cur;
	/// io input
	In: T_Ctrl_SIf_BCC_In;
	/// io output
	Out: T_Ctrl_SIf_BCC_Out;
	/// alarm number used in this controller
	Alm: ARRAY[1..6] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>