<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_BCC_Par" Id="{f116adff-fddf-4ac8-95de-c4ab4f337edd}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_BCC_Par :
STRUCT
	/// [ms] Timeout power on
	udiTOPowerOn_ms: UDINT;
	/// [ms] Timeout read
	udiTORead_ms: UDINT;
	/// [ms] Barcode scan delay time - Delay before a barcode scan will be triggered after a new product has been detected by trigger sensor input
	udiExecuteScanDelayTime_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>